--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,27 +1,14 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Inbox
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content [fullscreen]="true">
   <ion-refresher slot="fixed" (ionRefresh)="refresh($event)">
     <ion-refresher-content></ion-refresher-content>
   </ion-refresher>
-  
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">
-        Inbox
-      </ion-title>
-    </ion-toolbar>
-  </ion-header>
-  
-  <ion-list>
-    @for (message of getMessages(); track message.id) {
-    <app-message [message]="message"> </app-message>
-    }    
-  </ion-list>
+
+  <div class="container">
+  @for (message of getMessages(); track message.id) {
+    <ion-card color="primary">
+      <app-message [message]="message"> </app-message>
+    </ion-card>
+  }
+  </div>
+
 </ion-content>
